tests/testcases/invalid/semantic/30_missing_return_if_without_else.ciel
// Error: control may reach end of non-void function without returning a value
int maybe_return(bool condition) {
    if (condition) {
        return 1;
    }
    // Error: missing else branch - not all paths return
}

int main() {
    int x = maybe_return(true);
    return 0;
}
